# ENTERPRISE-AI-AGENT-EVALUATION-PLATFORM

./: .gitignore  README.md  pyproject.toml
.github/workflows/: agent-eval.yml
examples/: canary_config.json  quality_gate.json  wiki_eval_cases.jsonl  wiki_eval_cases_baseline.jsonl
reports/: baseline_report.md  baseline_traces.jsonl  eval_report.md  regression_report.md  traces.jsonl
src/agent_eval_platform/: __init__.py  __main__.py  canary.py  checks.py  cli.py  data_models.py  evaluator.py  gates.py  io_utils.py  mcp_server.py  reports.py  synthetic.py  telemetry.py
tests/: test_checks.py  test_evaluator.py  test_reports_canary_mcp.py
